// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.Footer checkGrammar=false 1`] = `
<footer
  className="uu5-bricks-footer"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Footer checkGrammar=true 1`] = `
<footer
  className="uu5-bricks-footer"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Footer checkHighlight=false 1`] = `
<footer
  className="uu5-bricks-footer"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Footer checkHighlight=true 1`] = `
<footer
  className="uu5-bricks-footer"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Footer checkSpaces=false 1`] = `
<footer
  className="uu5-bricks-footer"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Footer checkSpaces=true 1`] = `
<footer
  className="uu5-bricks-footer"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Footer className="my-classname" 1`] = `
<footer
  className="uu5-bricks-footer my-classname"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Footer className="test-classname" 1`] = `
<footer
  className="uu5-bricks-footer test-classname"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Footer content="This is Content from ContentMixin" 1`] = `
<footer
  className="uu5-bricks-footer"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="This is Content from ContentMixin"
  />
</footer>
`;

exports[`UU5.Bricks.Footer content=12345 1`] = `
<footer
  className="uu5-bricks-footer"
  id="uuID"
  style={Object {}}
  title={null}
>
  12345
</footer>
`;

exports[`UU5.Bricks.Footer controlled=false 1`] = `
<footer
  className="uu5-bricks-footer"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Footer controlled=true 1`] = `
<footer
  className="uu5-bricks-footer"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Footer default props 1`] = `
<footer
  className="uu5-bricks-footer"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Footer disabled=false 1`] = `
<footer
  className="uu5-bricks-footer"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Footer disabled=false 3`] = `
<footer
  className="uu5-bricks-footer"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Footer disabled=true 1`] = `
<footer
  className="uu5-bricks-footer uu5-common-disabled"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Footer disabled=true 3`] = `
<footer
  className="uu5-bricks-footer uu5-common-disabled"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Footer dynamic=false 1`] = `
<footer
  className="uu5-bricks-footer"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Footer dynamic=true 1`] = `
<footer
  className="uu5-bricks-footer"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Footer elementAttrs={"data":{"test":"data-test-value"}} 1`] = `
<footer
  className="uu5-bricks-footer"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Footer fullTextSearchPriority=0 1`] = `
<footer
  className="uu5-bricks-footer uu-fulltextsearch-0"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Footer fullTextSearchPriority=0 2`] = `
<footer
  className="uu5-bricks-footer uu-fulltextsearch-0"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Footer hidden=false 1`] = `
<footer
  className="uu5-bricks-footer"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Footer hidden=false 3`] = `
<footer
  className="uu5-bricks-footer"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Footer hidden=true 1`] = `
<footer
  className="uu5-bricks-footer uu5-common-hidden"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Footer hidden=true 3`] = `
<footer
  className="uu5-bricks-footer uu5-common-hidden"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Footer id="myId" 1`] = `
<footer
  className="uu5-bricks-footer"
  id="myId"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Footer id="test-id" 1`] = `
<footer
  className="uu5-bricks-footer"
  id="test-id"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Footer ignoreHTML=false 1`] = `
<footer
  className="uu5-bricks-footer"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Footer ignoreHTML=true 1`] = `
<footer
  className="uu5-bricks-footer"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Footer level="0" 1`] = `
<footer
  className="uu5-bricks-footer"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Footer level="1" 1`] = `
<footer
  className="uu5-bricks-footer"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Footer level="2" 1`] = `
<footer
  className="uu5-bricks-footer"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Footer level="3" 1`] = `
<footer
  className="uu5-bricks-footer"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Footer level="4" 1`] = `
<footer
  className="uu5-bricks-footer"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Footer level="5" 1`] = `
<footer
  className="uu5-bricks-footer"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Footer level="6" 1`] = `
<footer
  className="uu5-bricks-footer"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Footer level=0 1`] = `
<footer
  className="uu5-bricks-footer"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Footer level=1 1`] = `
<footer
  className="uu5-bricks-footer"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Footer level=2 1`] = `
<footer
  className="uu5-bricks-footer"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Footer level=3 1`] = `
<footer
  className="uu5-bricks-footer"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Footer level=4 1`] = `
<footer
  className="uu5-bricks-footer"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Footer level=5 1`] = `
<footer
  className="uu5-bricks-footer"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Footer level=6 1`] = `
<footer
  className="uu5-bricks-footer"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Footer mainAttrs=undefined 1`] = `
<footer
  className="uu5-bricks-footer"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Footer name="myName" 1`] = `
<footer
  className="uu5-bricks-footer"
  id="uuID"
  name="myName"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Footer nestingLevel="bigBox" 1`] = `
<footer
  className="uu5-bricks-footer"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Footer nestingLevel="bigBoxCollection" 1`] = `
<footer
  className="uu5-bricks-footer"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Footer nestingLevel="box" 1`] = `
<footer
  className="uu5-bricks-footer"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Footer nestingLevel="box" 3`] = `
<footer
  className="uu5-bricks-footer"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Footer nestingLevel="boxCollection" 1`] = `
<footer
  className="uu5-bricks-footer"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Footer nestingLevel="inline" 1`] = `
<footer
  className="uu5-bricks-footer"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Footer nestingLevel="inline" 3`] = `
<footer
  className="uu5-bricks-footer"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Footer nestingLevel="page" 1`] = `
<footer
  className="uu5-bricks-footer"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Footer nestingLevel="smallBox" 1`] = `
<footer
  className="uu5-bricks-footer"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Footer nestingLevel="smallBoxCollection" 1`] = `
<footer
  className="uu5-bricks-footer"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Footer nestingLevel="spa" 1`] = `
<footer
  className="uu5-bricks-footer"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Footer noPrint=false 1`] = `
<footer
  className="uu5-bricks-footer"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Footer noPrint=true 1`] = `
<footer
  className="uu5-bricks-footer"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Footer pureRender=false 1`] = `
<footer
  className="uu5-bricks-footer"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Footer pureRender=true 1`] = `
<footer
  className="uu5-bricks-footer"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Footer selected=false 1`] = `
<footer
  className="uu5-bricks-footer"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Footer selected=true 1`] = `
<footer
  className="uu5-bricks-footer uu5-common-selected"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Footer style="padding:8px; borderRadius: 2px" 1`] = `
<footer
  className="uu5-bricks-footer"
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Footer style={"backgroundColor":"red","color":"blue"} 1`] = `
<footer
  className="uu5-bricks-footer"
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Footer style={"margin":8} 1`] = `
<footer
  className="uu5-bricks-footer"
  id="uuID"
  style={
    Object {
      "margin": 8,
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Footer textCorrector=false 1`] = `
<footer
  className="uu5-bricks-footer"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Footer textCorrector=true 1`] = `
<footer
  className="uu5-bricks-footer"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Footer tooltip="My Tooltip" 1`] = `
<footer
  className="uu5-bricks-footer"
  id="uuID"
  style={Object {}}
  title="My Tooltip"
/>
`;
